# graphrag_neo4j_proj

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  README.md  develop_doc.md  docker-compose.yml  pyproject.toml  requirements.txt
.trae/rules/: project_rules.md
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  router.py
app/api/v1/endpoints/: __init__.py  document_management.py  documents.py  graph.py  graphrag.py  knowledge.py  rag.py  system.py
app/core/: __init__.py  config.py  database.py  dependencies.py  logging.py
app/middleware/: __init__.py  logging_middleware.py
app/models/: __init__.py
app/models/database/: __init__.py  base.py  chunks.py  documents.py  entities.py  images.py  relations.py
app/models/graph/: __init__.py  base.py  nodes.py  queries.py  relationships.py
app/models/schemas/: __init__.py  base.py  chunks.py  documents.py  entities.py  graph.py  images.py  relations.py  search.py
app/services/: __init__.py  azure_openai_service.py  document_service.py  embedding_service.py  entity_service.py  file_storage_service.py  graph_index_service.py  graph_query_service.py  graph_service.py  graphrag_service.py  relation_service.py  text_service.py
app/utils/: __init__.py  exceptions.py  health_check.py  logger.py
config/: llm_prompts.json  neo4j_operations.json  postgresql_schema.json  system_config.json
docs/: API_DOCUMENTATION.md  README.md  USAGE_EXAMPLES.md  azure-openai-setup.md  graphrag-integration.md  multi-discipline-knowledge-base.md
docs/api/: README.md  health-check.md
docs/architecture/: system-overview.md  workflow-diagrams.md
docs/cicd/: README.md
docs/code-examples/: README.md
docs/deployment/: README.md  docker-setup.md  pgvector-setup.md  port-configuration.md
docs/development/: README.md  neo4j-session-management.md
docs/monitoring/: README.md
docs/performance/: README.md
docs/phase0/: README.md
docs/phase1/: README.md
docs/phase2/: README.md
docs/phase3/: README.md
docs/project-structure/: README.md
docs/security/: README.md
docs/testing/: README.md
docs/troubleshooting/: README.md  neo4j-authentication.md  service-connection-fixes.md  weaviate-issues.md
docs/user-guide/: README.md
examples/: usage_examples.md
init-scripts/postgres/: 01-init-pgvector.sql
scripts/: init_neo4j.py  requirements.txt  start.sh  stop.sh  test-services.py  test-services.sh
